--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ and is wrapped around the whole page content, except for the footer in this exam
             >
               <iframe
                 id="UstreamIframe"
-                src=".\video\mfa_android.mp4"
+                src="video/mfa_android.mp4"
                 width="100%" height="100%"
                 style="position:absolute; top:0; left: 0"
                 allowfullscreen
@@ -105,7 +105,7 @@ and is wrapped around the whole page content, except for the footer in this exam
           >
             <iframe
               id="UstreamIframe"
-              src=".\video\mfa_ios.mp4"
+              src="video/mfa_ios.mp4"
               width="100%" height="100%"
               style="position:absolute; top:0; left: 0"
               allowfullscreen
