--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ and is wrapped around the whole page content, except for the footer in this exam
               id="Container"
               style="padding-bottom:56.25%; position:relative; display:block; width: 100%"
             >
-              <iframe
+              <video
                 id="UstreamIframe"
                 src="video/mfa_android.mp4"
                 width="100%" height="100%"
@@ -92,7 +92,7 @@ and is wrapped around the whole page content, except for the footer in this exam
                 frameborder="0"
                 referrerpolicy="no-referrer-when-downgrade"
               >
-              </iframe>
+              </video>
             </div>
           
           <div class="w3-xxxlarge">
