--- a/index.html
+++ b/index.html
@@ -82,17 +82,16 @@ and is wrapped around the whole page content, except for the footer in this exam
               id="Container"
               style="padding-bottom:56.25%; position:relative; display:block; width: 100%"
             >
-              <video
-                id="UstreamIframe"
-                src="video/mfa_android.mp4"
-                width="100%" height="100%"
-                style="position:absolute; top:0; left: 0"
-                allowfullscreen
-                webkitallowfullscreen
-                frameborder="0"
-                referrerpolicy="no-referrer-when-downgrade"
-              >
-              </video>
+              
+               <video width="320" height="240" controls>
+                  <source src="video/mfa_android.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                </video>
+
+
+
+
+
             </div>
           
           <div class="w3-xxxlarge">
