--- a/index.html
+++ b/index.html
@@ -87,11 +87,6 @@ and is wrapped around the whole page content, except for the footer in this exam
                   <source src="video/mfa_android.mp4" type="video/mp4">
                   Your browser does not support the video tag.
                 </video>
-
-
-
-
-
             </div>
           
           <div class="w3-xxxlarge">
@@ -102,7 +97,14 @@ and is wrapped around the whole page content, except for the footer in this exam
             id="Container"
             style="padding-bottom:56.25%; position:relative; display:block; width: 100%"
           >
-            <iframe
+
+           <video width="320" height="240" controls>
+                  <source src="video/mfa_ios.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                </video>
+            </div>
+
+            <!--<iframe
               id="UstreamIframe"
               src="video/mfa_ios.mp4"
               width="100%" height="100%"
@@ -112,7 +114,7 @@ and is wrapped around the whole page content, except for the footer in this exam
               frameborder="0"
               referrerpolicy="no-referrer-when-downgrade"
             >
-            </iframe>
+            </iframe> -->
           </div>
         </div>
       </div>
