--- a/index.html
+++ b/index.html
@@ -9,38 +9,18 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-h1,h2,h3,h4,h5,h6 {font-family: "Oswald"}
-body {font-family: "Open Sans"}
-ul.a {list-style-type: disc;}
-body {
-  background-color: Black;
-}
-
-#customers {
-  border-collapse: collapse;
-  width: 80%;
-  margin: 0 auto;
-  text-align: center;
-}
-
-#customers td, #customers th {
-  border: 1px solid #ddd;
-  padding: 8px;
-}
-
-#customers tr:nth-child(even){background-color: #f2f2f2;}
-
-#customers tr:hover {background-color: #ddd; margin: 0 auto;}
-
-#customers th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: center;
-  background-color: black;
-  color: white;
-}
-
+    h1,h2,h3,h4,h5,h6 {font-family: "Oswald"}
+    body {font-family: "Open Sans"}
+    ul.a {list-style-type: disc;}
+    body { background-color: Black;}
+    video { width: 100%; height: auto;}
+    #customers { border-collapse: collapse; width: 80%; margin: 0 auto; text-align: center;}
+    #customers td, #customers th { border: 1px solid #ddd; padding: 8px;}
+    #customers tr:nth-child(even){background-color: #f2f2f2;}
+    #customers tr:hover {background-color: #ddd; margin: 0 auto;}
+    #customers th { padding-top: 12px; padding-bottom: 12px; text-align: center; background-color: black;color: white;}
 </style>
+
 </head>
 <body class="w3-black">
 
@@ -50,8 +30,8 @@ body {
   <!--<a href="#" class="w3-bar-item w3-button"><i class="fa fa-instagram"></i></a>-->
   <!--<a href="#" class="w3-bar-item w3-button"><i class="fa fa-snapchat"></i></a>-->
   <!--<a href="#" class="w3-bar-item w3-button"><i class="fa fa-flickr"></i></a>-->
- <!-- <a href="#" class="w3-bar-item w3-button"><i class="fa fa-twitter"></i></a>-->
- <!-- <a href="#" class="w3-bar-item w3-button"><i class="fa fa-linkedin"></i></a>-->
+  <!-- <a href="#" class="w3-bar-item w3-button"><i class="fa fa-twitter"></i></a>-->
+  <!-- <a href="#" class="w3-bar-item w3-button"><i class="fa fa-linkedin"></i></a>-->
   <a href="#" class="w3-bar-item w3-button w3-right"><i class="fa fa-search"></i></a>
 </div>
   
