--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ and is wrapped around the whole page content, except for the footer in this exam
           </div>
 
           <div id="Container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%">
-              <video width="320" height="240" controls>
+              <video width=100%; height=auto; controls>
                 <source src="video/mfa_ios.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                 </video>
