--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ and is wrapped around the whole page content, except for the footer in this exam
           </div>
           
           <div id="Container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%">
-              <video width=100%; height=auto; controls>
+              <video width=80%; height=auto; controls>
                   <source src="video/mfa_android.mp4" type="video/mp4">
                   Your browser does not support the video tag.
                 </video> 
@@ -71,8 +71,8 @@ and is wrapped around the whole page content, except for the footer in this exam
              <h1>iOS SETUP</h1>
           </div>
 
-          <div id="Container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%">
-              <video width=100%; height=auto; controls>
+          <div>
+              <video width=80%; height=auto; controls>
                 <source src="video/mfa_ios.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                 </video>
