--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ and is wrapped around the whole page content, except for the footer in this exam
             <h1>ANDROID SETUP</h1>
           </div>
           
-          <div id="Container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%">
+          <div>
               <video width=80%; height=auto; controls>
                   <source src="video/mfa_android.mp4" type="video/mp4">
                   Your browser does not support the video tag.
