--- a/index.html
+++ b/index.html
@@ -102,12 +102,14 @@
               </tr>
           <table>
 
-      <HR>
+      
     </div>
+
+   <HR>  
   </div>
 
 <!-- START - VIDEO GUIDES -->
-    <div class="w3-container w3-center  w3-white">
+    <div class="w3-container w3-center w3-white">
       <!-- Blog entry -->
       <div class="w3-container w3-white w3-margin w3-padding-large">
         <div class="w3-center">
@@ -130,11 +132,13 @@
     </div> 
 
 <!-- Footer -->
-<footer class="w3-black " style="padding:10px">
+<footer class="w3-black w3-container " style="padding:10px">
   <a href="https://www.oerlikon.com/" 
    style="text-decoration: none; margin: 0 auto;" class=" w3-center"><h5>OERLIKON #OneIT<h5></a>
   <!--<a href="#" class="w3-button w3-black w3-padding-large w3-margin-bottom"><i class="fa fa-arrow-up w3-margin-right"></i>TO THE TOP</a>-->
 </footer>
+
+
 
 <script>
 // Toggle between hiding and showing blog replies/comments
