--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>OERLIKON Luxury - IT Integration</title>
+<title>OERLIKON Luxury IT Integration
+<link rel="icon" type="image/x-icon" href="/images/shield.png"></title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
