--- a/index.html
+++ b/index.html
@@ -113,14 +113,14 @@
       <div class="w3-container w3-white w3-margin w3-padding-large">
         <div class="w3-center">
           <div class="w3-xxxlarge">
-            <h2>ANDROID SETUP</h2>
+            <h2>SETUP MFA SU DISPOSITIVI ANDROID</h2>
           </div>
               <video width=100%; height=auto; controls>
                   <source src="video/mfa_android.mp4" type="video/mp4">
                   Your browser does not support the video tag.
                 </video> 
           <div class="w3-xxxlarge">
-             <h2>iOS SETUP</h2>
+             <h2>SETUP MFA SU DISPOSITIVI APPLE</h2>
           </div>
               <video width=100%; height=auto; controls>
                 <source src="video/mfa_ios.mp4" type="video/mp4">
