--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
   
 <!-- START - Header -->
   <header class="w3-container w3-black w3-center w3-padding-48 w3-white">
-    <h1 class="w3-xxxlarge" style="color: #FFFFFF"><b>RIRI IT INTEGRATION PROJECT <br>MFA SETUP</b></h1>
+    <h1 class="w3-xxxlarge" style="color: #FFFFFF"><b>RIRI IT INTEGRATION PROJECT </b></h1>
+    <h3 class="w3-xxxlarge" style="color: #FFFFFF"><b>MFA</b></h3>
   </header>
 
 <!-- Grid -->
@@ -64,7 +65,7 @@
           </ul>
 
           <div class="w3-center">
-              <h2>PIANO DI MIGRAZIONE DEGLI ACCOUNT M365 RIRI IN OERLIKON</h2>
+              <h2>PIANO DI MIGRAZIONE IN OERLIKON DEGLI ACCOUNT M365 RIRI</h2>
           </div>
 
           <table id="customers" style="  margin: 0 auto;">
