--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         <div class="w3-justify">
           
-         <ul class="a">
+         <ul class="a w3-center ">
             <li><strong>Di cosa si tratta?</strong> Il MFA è un metodo di autenticazione che richiede ad un utente di fornire almeno due fattori di verifica per poter accedere a risorse quali posta elettronica e servizi Microsoft aziendali(es. Outlook, Teams)</li>
             <li><strong>Come funziona?</strong> Nel caso si verifichi un tentativo di accesso al tuo nuovo ambiente di lavoro digitale Oerlikon ritenuto anomalo, poiché proveniente da un paese a rischio, o dalle caratteristiche diverse dall’utilizzo abituale, verrà notificato sul tuo dispositivo mobile (smartphone) il tentativo di accesso e richiesta l'approvazione della tua identità. Ricordiamo che questo è uno strumento di salvaguardia della tua identità. Grazie all’applicazione mobile Microsoft Authenticator potrai quindi gestire e confermare l'accesso alle tue applicazioni Microsoft mediante uno smartphone.</li>
             <li><strong>Come attivare il MFA?</strong> La configurazione è molto semplice e può essere effettuata in autonomia senza il supporto IT seguendo le video guida Android o Apple che trovi riportate in calce.</li>
