--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <!-- START - Header -->
   <header class="w3-container w3-black w3-center w3-padding-48 w3-white">
     <h1 class="w3-xxxlarge" style="color: #FFFFFF"><b>RIRI IT INTEGRATION PROJECT </b></h1>
-    <h3 class="w3-xxxlarge" style="color: #FFFFFF"><b>MFA</b></h3>
+    <h3 class="w3-xxxlarge" style="color: #FFFFFF">MFA</h3>
   </header>
 
 <!-- Grid -->
@@ -114,14 +114,14 @@
       <div class="w3-container w3-white w3-margin w3-padding-large">
         <div class="w3-center">
           <div class="w3-xxxlarge">
-            <h2>SETUP MFA SU DISPOSITIVI ANDROID</h2>
+            <h3>SETUP MFA PER DISPOSITIVI ANDROID</h3>
           </div>
               <video width=100%; height=auto; controls>
                   <source src="video/mfa_android.mp4" type="video/mp4">
                   Your browser does not support the video tag.
                 </video> 
           <div class="w3-xxxlarge">
-             <h2>SETUP MFA SU DISPOSITIVI APPLE</h2>
+             <h3>SETUP MFA PER DISPOSITIVI APPLE</h3>
           </div>
               <video width=100%; height=auto; controls>
                 <source src="video/mfa_ios.mp4" type="video/mp4">
