--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
     h1,h2,h3,h4,h5,h6 {font-family: "Oswald"}
-    body {font-family: "Aptos"}
+    body {font-family: "Open Sans"}
     ul.a {list-style-type: disc;}
     body { background-color: Black;}
     video { width: 80%; height: auto;position: float; border: 3px solid #ECECEC;box-sizing:border-box;}
