--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
  <!-- START - INFORMAZIONI UTILI  -->
     <div class="w3-container w3-white w3-margin w3-padding-large">
         <div class="w3-center">
-          <h2>MULTI FACTOR AUTHENTICATION</h2>
+          <h2>MULTI FACTOR AUTHENTICATION (MFA)</h2>
           <h4>INFORMAZIONI UTILI</h4>
         </div>
 
