--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </ul>
 
           <!-- START - VIDEO GUIDES -->
-              <div class="w3-container w3-center w3-white">
+              <div class="w3-container w3-center w3-black">
                 <!-- Blog entry -->
                 <div class="w3-container w3-white w3-margin w3-padding-large">
                   <div class="w3-center">
