--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <div class="w3-content" style="max-width:1600px; width: 100% ">
     
  <!-- START - INFORMAZIONI UTILI  -->
-    <div class="w3-container w3-black w3-margin w3-padding-large">
+    <div class="w3-container w3-white w3-margin w3-padding-large">
         <div class="w3-center">
           <h2>MULTI FACTOR AUTHENTICATION (MFA)</h2>
           <h4>INFORMAZIONI UTILI</h4>
