--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <!-- END - Navigation bar with icons -->
   
 <!-- START - Header -->
-  <header class="w3-container w3-black w3-center w3-padding-48 w3-white">
+  <header class="w3-container w3-white w3-center w3-padding-48 w3-white">
     <h1 class="w3-xxxlarge" style="color: #FFFFFF"><b>RIRI IT INTEGRATION PROJECT </b></h1>
   </header>
 
@@ -68,7 +68,7 @@
           <!-- START - VIDEO GUIDES -->
               <div class="w3-container w3-center w3-black">
                 <!-- Blog entry -->
-                <div class="w3-container w3-white w3-margin w3-padding-large">
+                <div class="w3-container w3-black w3-margin w3-padding-large">
                   <div class="w3-center">
                     <div class="w3-xxxlarge">
                       <h3>SETUP MFA PER DISPOSITIVI ANDROID</h3>
