--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   
 <!-- START - Header -->
   <header class="w3-container w3-white w3-center w3-padding-48 w3-white">
-    <h1 class="w3-xxxlarge" style="color: #FFFFFF"><b>RIRI IT INTEGRATION PROJECT </b></h1>
+    <h1 class="w3-xxxlarge"><b>RIRI IT INTEGRATION PROJECT </b></h1>
   </header>
 
 <!-- Grid -->
@@ -48,7 +48,7 @@
     
  <!-- START - INFORMAZIONI UTILI  -->
     <div class="w3-container w3-black w3-margin w3-padding-large">
-        <div class="w3-center w3-white">
+        <div class="w3-center w3-black">
           <h2>MULTI FACTOR AUTHENTICATION (MFA)</h2>
           <h4>INFORMAZIONI UTILI</h4>
         </div>
