--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     h1,h2,h3,h4,h5,h6 {font-family: "Oswald"}
     body {font-family: "Open Sans"}
     ul.a {list-style-type: disc;}
-    body { background-color: Black;}
-    video { width: 80%; height: auto;position: float; border: 3px solid #ECECEC;box-sizing:border-box;}
+    body { background-color: black;}
+    video { width: 80%; height: auto;position: float; border: 2px solid #000000;box-sizing:border-box;}
     #customers { border-collapse: collapse; width: 80%; margin: 0 auto; text-align: center;}
     #customers td, #customers th { border: 1px solid #ddd; padding: 8px;}
     #customers tr:nth-child(even){background-color: #f2f2f2;}
