--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <div class="w3-container w3-center w3-black">
                 <!-- Blog entry -->
                 <div class="w3-container w3-black w3-margin w3-padding-large">
-                  <div class="w3-center">
+                  <div class="w3-center w3-padding-large">
                     <div class="w3-xxxlarge">
                       <h3>SETUP MFA PER DISPOSITIVI ANDROID</h3>
                     </div>
@@ -77,7 +77,7 @@
                             <source src="video/mfa_android.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                           </video> 
-                    <div class="w3-xxxlarge">
+                    <div class="w3-xxxlarge w3-padding-large">
                        <h3>SETUP MFA PER DISPOSITIVI APPLE</h3>
                     </div>
                         <video width=100%; height=auto; controls>
