--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body class="w3-black">
 
 <!-- START - Navigation bar with icons -->
-<div class="w3-bar w3-black w3-hide-small">
+<div class="w3-bar w3-white w3-hide-small">
  <!--<a href="#" class="w3-bar-item w3-button"><i class="fa fa-facebook-official"></i></a>
  <!--<a href="#" class="w3-bar-item w3-button"><i class="fa fa-instagram"></i></a>-->
  <!--<a href="#" class="w3-bar-item w3-button"><i class="fa fa-snapchat"></i></a>-->
