--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
                 </div>
               </div> 
 
-          <div class="w3-center">
+          <div class="w3-center w3-white">
               <h2>PIANO DI MIGRAZIONE IN OERLIKON DEGLI ACCOUNT M365 RIRI</h2>
           </div>
 
-          <table id="customers" style="  margin: 0 auto;">
+          <table id="customers" class="w3-white"style="  margin: 0 auto;">
               <tr>
                 <th>Sito</th>
                 <th>Data migrazione</th>
