--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
 
 <!-- Footer -->
-<footer class="w3-container w3-black w3-margin w3-padding-large " style="padding:10px">
+<footer class="w3-bar w3-black w3-margin w3-padding-large " style="padding:10px">
   <a href="https://www.oerlikon.com/" 
    style="text-decoration: none; margin: 0 auto;" class=" w3-center"><h4>OERLIKON #OneIT<h4></a>
   <!--<a href="#" class="w3-button w3-black w3-padding-large w3-margin-bottom"><i class="fa fa-arrow-up w3-margin-right"></i>TO THE TOP</a>-->
