--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
                 </div>
               </div> 
 
-          <div class="w3-center w3-white">
+          <div class="w3-center w3-black">
               <h2>PIANO DI MIGRAZIONE IN OERLIKON DEGLI ACCOUNT M365 RIRI</h2>
           
-            <table id="customers" class="w3-white"style="  margin: 0 auto;">
+            <table id="customers" class="w3-black"style="  margin: 0 auto;">
               <tr>
                 <th>Sito</th>
                 <th>Data migrazione</th>
