--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
     h1,h2,h3,h4,h5,h6 {font-family: "Oswald"}
     body {font-family: "Open Sans"}
     ul.a {list-style-type: disc;}
-    body { background-color: black;}
+    body { background-color: white;}
     video { width: 80%; height: auto;position: float; border: 2px solid #000000;box-sizing:border-box;}
     #customers { border-collapse: collapse; width: 80%; margin: 0 auto; text-align: center;}
     #customers td, #customers th { border: 1px solid #ddd; padding: 8px;}
     #customers tr:nth-child(even){background-color: #f2f2f2;}
     #customers tr:hover {background-color: #ddd; margin: 0 auto;}
-    #customers th { padding-top: 12px; padding-bottom: 12px; text-align: center; background-color: black;color: white;}
+    #customers th { padding-top: 12px; padding-bottom: 12px; text-align: center; background-color: white;color: white;}
 </style>
 
 </head>
-<body class="w3-black">
+<body class="w3-white">
 
 <!-- START - Navigation bar with icons -->
-<div class="w3-bar w3-black w3-hide-small">
+<div class="w3-bar w3-white w3-hide-small">
  <!--<a href="#" class="w3-bar-item w3-button"><i class="fa fa-facebook-official"></i></a>
  <!--<a href="#" class="w3-bar-item w3-button"><i class="fa fa-instagram"></i></a>-->
  <!--<a href="#" class="w3-bar-item w3-button"><i class="fa fa-snapchat"></i></a>-->
@@ -47,8 +47,8 @@
 <div class="w3-content" style="max-width:1600px; width: 100% ">
     
  <!-- START - INFORMAZIONI UTILI  -->
-    <div class="w3-container w3-black w3-margin w3-padding-large">
-        <div class="w3-center w3-black">
+    <div class="w3-container w3-white w3-margin w3-padding-large">
+        <div class="w3-center w3-white">
           <h2>MULTI FACTOR AUTHENTICATION (MFA)</h2>
           <h4>INFORMAZIONI UTILI</h4>
         </div>
@@ -64,9 +64,9 @@
           </ul>
 
           <!-- START - VIDEO GUIDES -->
-              <div class="w3-container w3-center w3-black">
+              <div class="w3-container w3-center w3-white">
                 <!-- Blog entry -->
-                <div class="w3-container w3-black w3-margin w3-padding-large">
+                <div class="w3-container w3-white w3-margin w3-padding-large">
                   <div class="w3-center w3-padding-large">
                     <div class="w3-xxxlarge">
                       <h3>SETUP MFA PER DISPOSITIVI ANDROID</h3>
@@ -86,10 +86,10 @@
                 </div>
               </div> 
 
-          <div class="w3-center w3-black">
+          <div class="w3-center w3-white">
               <h2>PIANO DI MIGRAZIONE IN OERLIKON DEGLI ACCOUNT M365 RIRI</h2>
           
-            <table id="customers" class="w3-black"style="  margin: 0 auto;">
+            <table id="customers" class="w3-white"style="  margin: 0 auto;">
               <tr>
                 <th>Sito</th>
                 <th>Data migrazione</th>
@@ -131,10 +131,10 @@
 
 
 <!-- Footer -->
-<footer class="w3-bar w3-black w3-margin w3-padding-large " style="padding:10px">
+<footer class="w3-bar w3-white w3-margin w3-padding-large " style="padding:10px">
   <a href="https://www.oerlikon.com/" 
    style="text-decoration: none; margin: 0 auto;" class=" w3-center"><h4>OERLIKON #OneIT<h4></a>
-  <!--<a href="#" class="w3-button w3-black w3-padding-large w3-margin-bottom"><i class="fa fa-arrow-up w3-margin-right"></i>TO THE TOP</a>-->
+  <!--<a href="#" class="w3-button w3-white w3-padding-large w3-margin-bottom"><i class="fa fa-arrow-up w3-margin-right"></i>TO THE TOP</a>-->
 </footer>
 
 
