--- a/index.html
+++ b/index.html
@@ -50,18 +50,14 @@
     <div class="w3-container w3-white w3-margin w3-padding-large">
         <div class="w3-center w3-white">
           <h2>MULTI FACTOR AUTHENTICATION (MFA)</h2>
-          <h4>INFORMAZIONI UTILI</h4>
+          <h6>DI COSA SI TRATTA</h6> Il MFA è un metodo di autenticazione che richiede ad un utente di fornire almeno due fattori di verifica per poter accedere a risorse quali posta elettronica e servizi Microsoft aziendali(es. Outlook, Teams)
+          <h6>COME FUZIONA</h6> Nel caso si verifichi un tentativo di accesso al tuo nuovo ambiente di lavoro digitale Oerlikon ritenuto anomalo, poiché proveniente da un paese a rischio, o dalle caratteristiche diverse dall’utilizzo abituale, verrà notificato sul tuo dispositivo mobile (smartphone) il tentativo di accesso e richiesta l'approvazione della tua identità. Ricordiamo che questo è uno strumento di salvaguardia della tua identità. Grazie all’applicazione mobile Microsoft Authenticator potrai quindi gestire e confermare l'accesso alle tue applicazioni Microsoft mediante uno smartphone.
+          <h6>COME ATTIVARLO</h6> La configurazione è molto semplice e può essere effettuata in autonomia senza il supporto IT seguendo le video guida Android o Apple che trovi riportate in calce.
+          <h6>PERCHE'</h6> Il tuo profilo IT (es. casella mail e strumenti di collaborazione tra i quali Teams e suite Microsoft Office) verrà migrato nell'ecosistema digitale Oerlikon che richiede degli standard di sicurezza elevati
+          <h6>DOVE</h6> L’applicazione Microsoft Authenticator va installata nel tuo dispositivo mobile (smartphone)
+          <h6>QUANDO ATTIVARLO</h6> Qualche giorno prima delle date riportate in tabella sotto e come indicato nelle video guide, ti invitiamo a provvedere al download dell'applicazione dallo store del tuo smartphone.Le tue nuove credenziali Oerlikon (nome utente e password) ti verranno comunicate qualche giorno prima della data di migrazione del tuo account RRII di posta e collaborazione (Teams..). 
+          <h6>NELLA QUOTIDIANITA'</h6> Grazie agli algoritmi di Microsoft che riconoscono il tuo comportamento (es. accessi dalla stessa località geografica), la frequenza di richiesta dell’approvazione a due fattori sarà molto bassa.
         </div>
-          
-         <ul class="a w3-margin w3-center" style="width:100%;">
-            <li><h6>DI COSA SI TRATTA</h6> Il MFA è un metodo di autenticazione che richiede ad un utente di fornire almeno due fattori di verifica per poter accedere a risorse quali posta elettronica e servizi Microsoft aziendali(es. Outlook, Teams)</li>
-            <li><h6>COME FUZIONA</h6> Nel caso si verifichi un tentativo di accesso al tuo nuovo ambiente di lavoro digitale Oerlikon ritenuto anomalo, poiché proveniente da un paese a rischio, o dalle caratteristiche diverse dall’utilizzo abituale, verrà notificato sul tuo dispositivo mobile (smartphone) il tentativo di accesso e richiesta l'approvazione della tua identità. Ricordiamo che questo è uno strumento di salvaguardia della tua identità. Grazie all’applicazione mobile Microsoft Authenticator potrai quindi gestire e confermare l'accesso alle tue applicazioni Microsoft mediante uno smartphone.</li>
-            <li><h6>COME ATTIVARLO</h6> La configurazione è molto semplice e può essere effettuata in autonomia senza il supporto IT seguendo le video guida Android o Apple che trovi riportate in calce.</li>
-            <li><h6>PERCHE'</h6> Il tuo profilo IT (es. casella mail e strumenti di collaborazione tra i quali Teams e suite Microsoft Office) verrà migrato nell'ecosistema digitale Oerlikon che richiede degli standard di sicurezza elevati</li>
-            <li><h6>DOVE</h6> L’applicazione Microsoft Authenticator va installata nel tuo dispositivo mobile (smartphone)</li>
-            <li><h6>QUANDO ATTIVARLO</h6> Qualche giorno prima delle date riportate in tabella sotto e come indicato nelle video guide, ti invitiamo a provvedere al download dell'applicazione dallo store del tuo smartphone.Le tue nuove credenziali Oerlikon (nome utente e password) ti verranno comunicate qualche giorno prima della data di migrazione del tuo account RRII di posta e collaborazione (Teams..). </li>
-            <li><h6>NELLA QUOTIDIANITA'</h6> Grazie agli algoritmi di Microsoft che riconoscono il tuo comportamento (es. accessi dalla stessa località geografica), la frequenza di richiesta dell’approvazione a due fattori sarà molto bassa.</li>
-          </ul>
 
           <!-- START - VIDEO GUIDES -->
               <div class="w3-container w3-center w3-white">
