--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body class="w3-white">
 
 <!-- START - Navigation bar with icons -->
-<div class="w3-bar w3-white w3-hide-small">
+<div class="w3-bar w3-black w3-hide-small">
  <!--<a href="#" class="w3-bar-item w3-button"><i class="fa fa-facebook-official"></i></a>
  <!--<a href="#" class="w3-bar-item w3-button"><i class="fa fa-instagram"></i></a>-->
  <!--<a href="#" class="w3-bar-item w3-button"><i class="fa fa-snapchat"></i></a>-->
@@ -39,7 +39,7 @@
 <!-- END - Navigation bar with icons -->
   
 <!-- START - Header -->
-  <header class="w3-container w3-white w3-center w3-padding-48 w3-white">
+  <header class="w3-container w3-black w3-center w3-padding-48 w3-white">
     <h1 class="w3-xxxlarge"><b>RIRI IT INTEGRATION PROJECT </b></h1>
   </header>
 
