--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     #customers td, #customers th { border: 1px solid #ddd; padding: 8px;}
     #customers tr:nth-child(even){background-color: #f2f2f2;}
     #customers tr:hover {background-color: #ddd; margin: 0 auto;}
-    #customers th { padding-top: 12px; padding-bottom: 12px; text-align: center; background-color: white;color: white;}
+    #customers th { padding-top: 12px; padding-bottom: 12px; text-align: center; background-color: black;color: white;}
 </style>
 
 </head>
