--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <div class="w3-center w3-white">
               <h2>PIANO DI MIGRAZIONE IN OERLIKON DEGLI ACCOUNT M365 RIRI</h2>
           
-            <table id="customers" class="w3-white"style="  margin: 0 auto;">
+            <table id="customers" style="  margin: 0 auto;">
               <tr>
                 <th>Sito</th>
                 <th>Data migrazione</th>
