--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 <div class="w3-content" style="max-width:1600px; width: 100% ">
     
  <!-- START - INFORMAZIONI UTILI  -->
-    <div class="w3-container w3-white w3-margin w3-padding-large" style="width: 70%;">
-        <div class="w3-center w3-white">
+    <div class="w3-container w3-white w3-margin w3-padding-large" ">
+        <div class="w3-center w3-white"style="width: 70%; margin:0 auto;text-align: justify;">
           <h2>MULTI FACTOR AUTHENTICATION (MFA)</h2>
           <h6>DI COSA SI TRATTA</h6> Il MFA è un metodo di autenticazione che richiede ad un utente di fornire almeno due fattori di verifica per poter accedere a risorse quali posta elettronica e servizi Microsoft aziendali(es. Outlook, Teams)
           <h6>COME FUZIONA</h6> Nel caso si verifichi un tentativo di accesso al tuo nuovo ambiente di lavoro digitale Oerlikon ritenuto anomalo, poiché proveniente da un paese a rischio, o dalle caratteristiche diverse dall’utilizzo abituale, verrà notificato sul tuo dispositivo mobile (smartphone) il tentativo di accesso e richiesta l'approvazione della tua identità. Ricordiamo che questo è uno strumento di salvaguardia della tua identità. Grazie all’applicazione mobile Microsoft Authenticator potrai quindi gestire e confermare l'accesso alle tue applicazioni Microsoft mediante uno smartphone.
