--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     #customers tr:nth-child(even){background-color: #f2f2f2;}
     #customers tr:hover {background-color: #ddd; margin: 0 auto;}
     #customers th { padding-top: 12px; padding-bottom: 12px; text-align: center; background-color: black;color: white;}
-    .center-img {cdisplay: flex;justify-content: center;calign-items: center;cheight: 100vh;}
+    .center-img {cdisplay: flex;justify-content: center;calign-items: center;cheight: 100vh;height: auto; max-width: 50%;}
 </style>
 
 </head>
@@ -29,9 +29,11 @@
 
 <!-- START - Navigation bar with icons -->
 <div class="w3-bar w3-black w3-hide-small">
- <a href="#" class="w3-bar-item w3-button"><i class="fa fa-facebook-official"><div class="center-img">
+ <a href="#" class="w3-bar-item ">
+    <div class="center-img">
         <img src="images/oerlikon.png" alt="Your Image">
-    </div></i></a>
+    </div>
+  </a>
  <!--<a href="#" class="w3-bar-item w3-button"><i class="fa fa-instagram"></i></a>-->
  <!--<a href="#" class="w3-bar-item w3-button"><i class="fa fa-snapchat"></i></a>-->
  <!--<a href="#" class="w3-bar-item w3-button"><i class="fa fa-flickr"></i></a>-->
