--- a/index.html
+++ b/index.html
@@ -30,10 +30,21 @@
 <!-- START - Navigation bar with icons -->
 <div class="w3-bar w3-black w3-hide-small">
  <a href="#" class="w3-bar-item ">
-    <div class="center-img">
+    <div class="center-img" style="max-width:70%">
+        <img src="images/riri_header.png" alt="Your Image">
+    </div>
+  </a>
+  <a href="#" class="w3-bar-item ">
+    <div class="center-img" style="max-width:70%">
         <img src="images/oerlikon.png" alt="Your Image">
     </div>
   </a>
+
+
+
+
+
+
  <!--<a href="#" class="w3-bar-item w3-button"><i class="fa fa-instagram"></i></a>-->
  <!--<a href="#" class="w3-bar-item w3-button"><i class="fa fa-snapchat"></i></a>-->
  <!--<a href="#" class="w3-bar-item w3-button"><i class="fa fa-flickr"></i></a>-->
