--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 <!-- START - Navigation bar with icons -->
 <div class="w3-bar w3-black w3-hide-small">
  <a href="#" class="w3-bar-item ">
-    <div class="center-img" style="max-width:70%">
+    <div class="center-img" style="max-width:70% !important">
         <img src="images/riri_header.png" alt="Your Image">
     </div>
   </a>
   <a href="#" class="w3-bar-item ">
-    <div class="center-img" style="max-width:70%">
+    <div class="center-img" style="max-width:70% !important">
         <img src="images/oerlikon.png" alt="Your Image">
     </div>
   </a>
