--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <!-- END - Navigation bar with icons -->
   
 <!-- START - Header -->
-  <header class="w3-container w3-black w3-center w3-padding-48 w3-white">
+  <header class="w3-container w3-black w3-center w3-padding-48">
     <h1 class="w3-xxxlarge"><b>RIRI IT INTEGRATION PROJECT </b></h1>
   </header>
 
@@ -136,7 +136,7 @@
 
 
 <!-- Footer -->
-<div class="w3-bar w3-black w3-hide-small">
+<div class="w3-container w3-black w3-center w3-padding-48">
   <footer class=" w3-black" style="padding:10px">
     <a href="https://www.oerlikon.com/" 
      style="text-decoration: none; margin: 0 auto;" class=" w3-center"><h4>OERLIKON #OneIT<h4></a>
