--- a/index.html
+++ b/index.html
@@ -29,21 +29,11 @@
 <!-- START - Navigation bar with icons -->
 <div class="w3-bar w3-black w3-hide-small">
  <a href="#" class="w3-bar-item ">
-    <div class="center-img" style="max-width:70% !important">
-        <img src="images/riri_header.png" alt="Your Image">
+    <div class="center-img" >
+        <img src="images/riri_header.png"  style="max-width:90% !important">
     </div>
   </a>
-  <a href="#" class="w3-bar-item ">
-    <div class="center-img" style="max-width:70% !important">
-        <img src="images/oerlikon.png" alt="Your Image">
-    </div>
-  </a>
-
-
-
-
-
-
+  
  <!--<a href="#" class="w3-bar-item w3-button"><i class="fa fa-instagram"></i></a>-->
  <!--<a href="#" class="w3-bar-item w3-button"><i class="fa fa-snapchat"></i></a>-->
  <!--<a href="#" class="w3-bar-item w3-button"><i class="fa fa-flickr"></i></a>-->
@@ -135,7 +125,7 @@
 
 
 <!-- Footer -->
-<div class="w3-container w3-black w3-center w3-padding-48">
+<div class="w3-container w3-black w3-center">
   <footer class=" w3-black" style="padding:10px">
     <a href="https://www.oerlikon.com/" 
      style="text-decoration: none; margin: 0 auto;" class=" w3-center"><h4>OERLIKON #OneIT<h4></a>
