--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 
 <!-- Footer -->
-<div class="w3-container w3-black w3-center">
+<div class="w3-container w3-black w3-center" style="max-width:1600px; width: 100% ">
   <footer class=" w3-black" style="padding:10px">
     <a href="https://www.oerlikon.com/" 
      style="text-decoration: none; margin: 0 auto;" class=" w3-center"><h4>OERLIKON #OneIT<h4></a>
