--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div class="w3-bar w3-black w3-hide-small">
  <a href="#" class="w3-bar-item ">
     <div class="center-img" >
-        <img src="images/riri_header.png"  style="max-width:90% !important">
+        <img src="images/riri_header.png"  style="max-width:80%; padding:20px">
     </div>
   </a>
   
