--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
+    p { text-align: justify; text-justify: inter-word;}
     h1,h2,h3,h4,h5,h6 {font-family: "Oswald"}
-    body {font-family: "Roboto"}
+    body {font-family: "Roboto"; font-size: 17px; line-height: 1.4}
     ul.a {list-style-type: disc;}
     body { background-color: white;}
     video { width: 80%; height: auto;position: float; border: 3px solid #FFFFFF;box-sizing:border-box;}
@@ -56,13 +57,20 @@
     <div class="w3-container w3-white w3-margin w3-padding-large" ">
         <div class="w3-center w3-white"style="width: 70%; margin:0 auto;text-align: justify;">
           <h2>MULTI FACTOR AUTHENTICATION (MFA)</h2>
-          <h6>DI COSA SI TRATTA</h6> Il MFA è un metodo di autenticazione che richiede ad un utente di fornire almeno due fattori di verifica per poter accedere a risorse quali posta elettronica e servizi Microsoft aziendali(es. Outlook, Teams)
-          <h6>COME FUZIONA</h6> Nel caso si verifichi un tentativo di accesso al tuo nuovo ambiente di lavoro digitale Oerlikon ritenuto anomalo, poiché proveniente da un paese a rischio, o dalle caratteristiche diverse dall’utilizzo abituale, verrà notificato sul tuo dispositivo mobile (smartphone) il tentativo di accesso e richiesta l'approvazione della tua identità. Ricordiamo che questo è uno strumento di salvaguardia della tua identità. Grazie all’applicazione mobile Microsoft Authenticator potrai quindi gestire e confermare l'accesso alle tue applicazioni Microsoft mediante uno smartphone.
-          <h6>COME ATTIVARLO</h6> La configurazione è molto semplice e può essere effettuata in autonomia senza il supporto IT seguendo le video guida Android o Apple che trovi riportate in calce.
-          <h6>PERCHE'</h6> Il tuo profilo IT (es. casella mail e strumenti di collaborazione tra i quali Teams e suite Microsoft Office) verrà migrato nell'ecosistema digitale Oerlikon che richiede degli standard di sicurezza elevati
-          <h6>DOVE</h6> L’applicazione Microsoft Authenticator va installata nel tuo dispositivo mobile (smartphone)
-          <h6>QUANDO ATTIVARLO</h6> Qualche giorno prima delle date riportate in tabella sotto e come indicato nelle video guide, ti invitiamo a provvedere al download dell'applicazione dallo store del tuo smartphone.Le tue nuove credenziali Oerlikon (nome utente e password) ti verranno comunicate qualche giorno prima della data di migrazione del tuo account RRII di posta e collaborazione (Teams..). 
-          <h6>NELLA QUOTIDIANITA'</h6> Grazie agli algoritmi di Microsoft che riconoscono il tuo comportamento (es. accessi dalla stessa località geografica), la frequenza di richiesta dell’approvazione a due fattori sarà molto bassa.
+          <h6>DI COSA SI TRATTA</h6> 
+          <p>Il MFA è un metodo di autenticazione che richiede ad un utente di fornire almeno due fattori di verifica per poter accedere a risorse quali posta elettronica e servizi Microsoft aziendali (es. Outlook, Teams)</p>
+          <h6>COME FUZIONA</h6> 
+          <p>Nel caso si verifichi un tentativo di accesso al tuo nuovo ambiente di lavoro digitale Oerlikon ritenuto anomalo, poiché proveniente da un paese a rischio, o dalle caratteristiche diverse dall’utilizzo abituale, verrà notificato sul tuo dispositivo mobile (smartphone) il tentativo di accesso e richiesta l'approvazione della tua identità. Ricordiamo che questo è uno strumento di salvaguardia della tua identità. Grazie all’applicazione mobile Microsoft Authenticator potrai quindi gestire e confermare l'accesso alle tue applicazioni Microsoft mediante uno smartphone.</p>
+          <h6>COME ATTIVARLO</h6> 
+          <p>La configurazione è molto semplice e può essere effettuata in autonomia senza il supporto IT seguendo le video guida Android o Apple che trovi riportate in calce.</p>
+          <h6>PERCHE'</h6>
+          <p>Il tuo profilo IT (es. casella mail e strumenti di collaborazione tra i quali Teams e suite Microsoft Office) verrà migrato nell'ecosistema digitale Oerlikon che utilizza degli standard di sicurezza elevati.</p>
+          <h6>DOVE</h6>
+          <p>L’applicazione Microsoft Authenticator va installata nel tuo dispositivo mobile (smartphone)</p>
+          <h6>QUANDO ATTIVARLO</h6>
+          <p>Qualche giorno prima delle date riportate in tabella sotto e come indicato nelle video guide, ti invitiamo a provvedere al download dell'applicazione dallo store del tuo smartphone. Le tue nuove credenziali Oerlikon (nome utente e password) ti verranno comunicate qualche giorno prima della data di migrazione del tuo account RRII di posta e collaborazione (Teams..).</p>
+          <h6>NELLA QUOTIDIANITA'</h6>
+          <p>Grazie agli algoritmi di Microsoft che riconoscono il tuo comportamento (es. accessi dalla stessa località geografica), la frequenza di richiesta dell’approvazione a due fattori sarà molto bassa.</p>
         </div>
 
           <!-- START - VIDEO GUIDES -->
