--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-    p { text-align: justify; text-justify: inter-word;}
+    p { text-align: justify; text-justify: inter-character;}
     h1,h2,h3,h4,h5,h6 {font-family: "Oswald"}
     body {font-family: "Roboto"; font-size: 17px; line-height: 1.4}
     ul.a {list-style-type: disc;}
