--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body class="w3-white">
 
 <!-- START - Navigation bar with icons -->
-<div class="w3-bar w3-black w3-hide-small">
+<div class="w3-bar w3-white w3-hide-small">
  <a href="#" class="w3-bar-item ">
     <div class="center-img" >
         <img src="images/riri_black.png"  style="max-width:80%; padding:20px">
