--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
                 <div class="w3-container w3-white w3-margin w3-padding-large">
                   <div class="w3-center w3-padding-large">
                     <div class="w3-xxxlarge">
-                      <h3>SETUP MFA PER DISPOSITIVI ANDROID</h3>
+                      <h2><b>SETUP MFA PER DISPOSITIVI ANDROID</b></h2>
                     </div>
                         <video width=100%; height=auto; controls>
                             <source src="video/mfa_android.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                           </video> 
                     <div class="w3-xxxlarge w3-padding-large">
-                       <h3>SETUP MFA PER DISPOSITIVI APPLE</h3>
+                       <h2><b>SETUP MFA PER DISPOSITIVI APPLE</b></h2>
                     </div>
                         <video width=100%; height=auto; controls>
                           <source src="video/mfa_ios.mp4" type="video/mp4">
@@ -97,7 +97,7 @@
               </div> 
 
           <div class="w3-center w3-white">
-            <h2>PIANO DI MIGRAZIONE IN OERLIKON DEGLI ACCOUNT M365 RIRI</h2>
+            <h2><b>PIANO DI MIGRAZIONE IN OERLIKON DEGLI ACCOUNT M365 RIRI</b></h2>
           
             <table id="customers" style="  margin: 0 auto;">
               <tr>
@@ -131,8 +131,8 @@
           <table>
         </div>
   </div>
-
-
+<br>
+<br>
 <!-- Footer -->
 <div class="w3-container w3-black w3-center" style="max-width:1600px; width: 100% ">
   <footer class=" w3-black" style="padding:10px">
