--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
     <div class="w3-container w3-white w3-margin w3-padding-large" ">
         <div class="w3-center w3-white"style="width: 70%; margin:0 auto;text-align: justify;">
           <h1><b>MULTI FACTOR AUTHENTICATION (MFA)</b></h1>
-          <h3><b>DI COSA SI TRATTA</h3> 
+          <h3><b>DI COSA SI TRATTA</b></h3> 
           <p>Il MFA è un metodo di autenticazione che richiede ad un utente di fornire almeno due fattori di verifica per poter accedere a risorse quali posta elettronica e servizi Microsoft aziendali (es. Outlook, Teams)</p>
           <h3><b>COME FUZIONA</b></h3> 
           <p>Nel caso si verifichi un tentativo di accesso al tuo nuovo ambiente di lavoro digitale Oerlikon ritenuto anomalo, poiché proveniente da un paese a rischio, o dalle caratteristiche diverse dall’utilizzo abituale, verrà notificato sul tuo dispositivo mobile (smartphone) il tentativo di accesso e richiesta l'approvazione della tua identità. Ricordiamo che questo è uno strumento di salvaguardia della tua identità. Grazie all’applicazione mobile Microsoft Authenticator potrai quindi gestire e confermare l'accesso alle tue applicazioni Microsoft mediante uno smartphone.</p>
           <h3><b>COME ATTIVARLO</b></h3> 
           <p>La configurazione è molto semplice e può essere effettuata in autonomia senza il supporto IT seguendo le video guida Android o Apple che trovi riportate in calce.</p>
           <h3><b>PERCHE'</b></h3>
-          <p>Il tuo profilo IT (es. casella mail e strumenti di collaborazione tra i quali Teams e suite Microsoft Office) verrà migrato nell'ecosistema digitale Oerlikon che utilizza degli standard di sicurezza elevati.</b></p>
+          <p>Il tuo profilo IT (es. casella mail e strumenti di collaborazione tra i quali Teams e suite Microsoft Office) verrà migrato nell'ecosistema digitale Oerlikon che utilizza degli standard di sicurezza elevati.</p>
           <h3><b>DOVE</b></h3>
           <p>L’applicazione Microsoft Authenticator va installata nel tuo dispositivo mobile (smartphone)</p>
           <h3><b>QUANDO ATTIVARLO</b></h3>
