--- a/index.html
+++ b/index.html
@@ -23,6 +23,28 @@
     #customers tr:hover {background-color: #ddd; margin: 0 auto;}
     #customers th { padding-top: 12px; padding-bottom: 12px; text-align: center; background-color: black;color: white;}
     .center-img {cdisplay: flex;justify-content: center;calign-items: center;cheight: 100vh;height: auto; max-width: 50%;}
+    .card {
+        background-color: black;
+        color: white;
+        padding: 1rem;
+        height: 4rem;
+      }
+
+      .cards {
+        max-width: 1200px;
+        margin: 0 auto;
+        display: grid;
+        gap: 1rem;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      }
+    @media (min-width: 600px) {
+      .cards { grid-template-columns: repeat(2, 1fr); }
+    }
+    @media (min-width: 900px) {
+      .cards { grid-template-columns: repeat(3, 1fr); }
+    }
+  
+
 </style>
 
 </head>
@@ -55,6 +77,49 @@
     
  <!-- START - INFORMAZIONI UTILI  -->
     <div class="w3-container w3-white w3-margin w3-padding-large" ">
+
+      <div class="cards">
+          <div class="card">ONE</div>
+          <div class="card">TWO</div>
+          <div class="card">THREE</div>
+          <div class="card">FOUR</div>
+          <div class="card">FIVE</div>
+          <div class="card">SIX</div>
+          <div class="card">SEVEN</div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         <div class="w3-center w3-white"style="width: 70%; margin:0 auto;text-align: justify;">
           <h1><b>MULTI FACTOR AUTHENTICATION (MFA)</b></h1>
           <br>
