--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     #customers th { padding-top: 12px; padding-bottom: 12px; text-align: center; background-color: black;color: white;}
     .center-img {cdisplay: flex;justify-content: center;calign-items: center;cheight: 100vh;height: auto; max-width: 50%;}
     .card {
-        background-color: black;
+        background-color:grey;
         color: white;
         padding: 1rem;
         height: 4rem;
