--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         color: white;
         padding: 1rem;
         height: 4rem;
+        grid-auto-rows: max-content;
       }
 
       .cards {
@@ -36,6 +37,7 @@
         display: grid;
         gap: 1rem;
         grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        grid-auto-rows: max-content;
       }
     @media (min-width: 600px) {
       .cards { grid-template-columns: repeat(2, 1fr); }
