--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
     #customers th { padding-top: 12px; padding-bottom: 12px; text-align: center; background-color: black;color: white;}
     .center-img {cdisplay: flex;justify-content: center;calign-items: center;cheight: 100vh;height: auto; max-width: 50%;}
     .card {
-        background-color:white;
+        background-color:black;
         color: white;
         padding: 1rem;
         height: 4rem;
         grid-auto-rows: max-content;
+        grid-auto-rows: minmax(100px, auto);
       }
 
       .cards {
@@ -37,6 +38,7 @@
         display: grid;
         gap: 1rem;
         grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        grid-auto-rows: minmax(100px, auto);
         grid-auto-rows: max-content;
       }
     @media (min-width: 600px) {
