--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           
           <div class="card">
           <h3><b>COME FUZIONA</b></h3> 
-          <p>Nel caso si verifichi un tentativo di accesso al tuo nuovo ambiente di lavoro digitale Oerlikon ritenuto anomalo, poiché proveniente da un paese a rischio, o dalle caratteristiche diverse dall’utilizzo abituale, verrà notificato sul tuo dispositivo mobile (smartphone) il tentativo di accesso e richiesta l'approvazione della tua identità. Ricordiamo che questo è uno strumento di salvaguardia della tua identità. Grazie all’applicazione mobile Microsoft Authenticator potrai quindi gestire e confermare l'accesso alle tue applicazioni Microsoft mediante uno smartphone.</p>
+          Nel caso si verifichi un tentativo di accesso al tuo nuovo ambiente di lavoro digitale Oerlikon ritenuto anomalo, poiché proveniente da un paese a rischio, o dalle caratteristiche diverse dall’utilizzo abituale, verrà notificato sul tuo dispositivo mobile (smartphone) il tentativo di accesso e richiesta l'approvazione della tua identità. Ricordiamo che questo è uno strumento di salvaguardia della tua identità. Grazie all’applicazione mobile Microsoft Authenticator potrai quindi gestire e confermare l'accesso alle tue applicazioni Microsoft mediante uno smartphone.
           </div>
           
           <div class="card">
