--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <!-- Grid -->
 <div class="w3-content" style="max-width:1600px; width: 100% ">
     
- <!-- START - INFORMAZIONI UTILI  -->
+ <!-- START - INFORMAZIONI UTILI 
     <div class="w3-container w3-white w3-margin w3-padding-large" ">
 
       <div class="cards">
@@ -118,7 +118,7 @@
           <p>Grazie agli algoritmi di Microsoft che riconoscono il tuo comportamento (es. accessi dalla stessa località geografica), la frequenza di richiesta dell’approvazione a due fattori sarà molto bassa.</p>
           </div>
     
-    </div>
+    </div>  -->
 
 
 
