--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Oerlikon Luxury IT Integration</title>
-<link rel="icon" type="image/x-icon" href="/images/shield.png">
+<link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
