--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 
 
-        <div class="w3-center w3-white"style="width: 70%; margin:0 auto;text-align: justify;">
+        <div class="w3-center w3-white"style="width: 70%; margin:0 auto;text-align: justify; padding-top: 50px;">
           <h1><b>MULTI FACTOR AUTHENTICATION (MFA)</b></h1>
           <br>
           <h3><b>DI COSA SI TRATTA</b></h3> 
