--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- Font Awesome icons (free version)-->
+<!-- Font Awesome icons (free version)
+
+ h1,h2,h3,h4,h5,h6 {font-family: "Oswald"}
+body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
+
+-->
 <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
->!-- Google fonts-->
 <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -19,8 +23,7 @@
 <link href="css/styles.css" rel="stylesheet" />
 <style>
     p { text-align: justify; text-justify: inter-character;}
-    h1,h2,h3,h4,h5,h6 {font-family: "Oswald"}
-    body {font-family: "Roboto"; font-size: 18px; line-height: 1.3}
+   
     ul.a {list-style-type: disc;}
     body { background-color: white;}
     video { width: 80%; height: auto;position: float; border: 3px solid #FFFFFF;box-sizing:border-box;}
