--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
                  </div>
             </section>
 
-            <section class="projects-section bg-dark" id="video_apple">
+            <section class="projects-section bg-black" id="video_apple">
                         <div class="container px-4 px-lg-5">
 
               <!-- Apple -->
