--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
                         </p>
                     </div>
                 </div>
-                <img class="img-fluid" src="assets/img/ipad.png" alt="..." />
+               
+<!--  <img class="img-fluid" src="assets/img/ipad.png" alt="..." />-->
             </div>
         </section>
 
