--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="#iniziamo">Iniziamo</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#projects">Istruzioni</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#istruzioni">Istruzioni</a></li>
                         <li class="nav-item"><a class="nav-link" href="#video">Video</a></li>
                     </ul>
                 </div>
@@ -68,7 +68,7 @@
         </section>
 
 <!-- Multifactor -->
-        <section class="projects-section bg-dark" id="projects">
+        <section class="projects-section bg-dark" id="istruzioni">
             <div class="container px-4 px-lg-5">
                 
                 <!-- Featured Project Row
@@ -326,7 +326,7 @@
 -->
 
 <!-- Footer-->
-        <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Copyright &copy; Oerlikon - OneIT</div></footer>
+        <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Copyright 2023 &copy; Oerlikon - OneIT</div></footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
