--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                                     <div class="d-flex h-100">
                                         <div class="project-text w-100 my-auto text-center text-lg-right text-white">       
                                             
-                                                         Qualche giorno prima delle date riportate in tabella sotto e come indicato nelle video guide, ti invitiamo a provvedere al download dell'applicazione dallo store del tuo smartphone. Le tue nuove credenziali Oerlikon (nome utente e password) ti verranno comunicate qualche giorno prima della data di migrazione del tuo account RRII di posta e collaborazione (Teams..).            
+                                                         Qualche giorno prima delle date riportate in tabella sotto e come indicato nelle video guide, ti invitiamo a provvedere al download dell'applicazione dallo store del tuo smartphone. Le tue nuove credenziali Oerlikon (nome utente e password) ti verranno comunicate qualche giorno prima della data di migrazione del tuo account Riri di posta e collaborazione (Teams..).            
                                                    
                                         </div>
                                     </div>
